--- a/swappa.html
+++ b/swappa.html
@@ -492,14 +492,14 @@
   </nav>
 
 
-  <div class="container bg-danger w-75">
+  <!-- <div class="container bg-danger w-75">
     <div class="container">
       <div class="text-center text-dark mt-2">
         <h3><i class="fa-solid m-2 fa-dollar-sign"></i>Get more green, get paid fast</h3>
       </div>
       <button type="button" class="btn btn-outline-secondary">Sell With Swappa<i class="fa-solid fa-arrow-right"></i></button>
     </div>
-  </div>
+  </div> -->
 
   <!-- Macbook and Laptops -->
   <div class="text-center text-dark mt-4"><h1><i class="fa-solid fa-laptop mx-2"></i>Macbook and Laptops</h1></div>
